k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-project-service
spec:
  selector:
    app: final-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
